dist/1.0/bin/sample/retrieveUnpackaged/objects/Invoice__c.object
<CustomObject>
    <description>BA invoices</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Billing_Account__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <label>Billing Account</label>
        <referenceTo>Billing_Accounts__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Batch__c</fullName>
        <label>External Agency</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Document Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoiced_Amount_Formatted__c</fullName>
        <formula>IF( ISBLANK( Invoiced_Amount__c ) , &apos;&apos;, 
IF( OR(CONTAINS(TEXT(Invoiced_Amount__c ), &apos;.&apos;), CONTAINS(TEXT(Invoiced_Amount__c ), &apos;,&apos;)) , SUBSTITUTE(TEXT(Invoiced_Amount__c ) , &apos; &apos;, &apos;&apos;), SUBSTITUTE(TEXT(Invoiced_Amount__c ) , &apos; &apos;, &apos;&apos;) + &apos;.00&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoiced Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoiced_Amount__c</fullName>
        <label>Invoiced Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoicing_Date__c</fullName>
        <label>Invoicing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Partial_Payment__c</fullName>
        <label>Last Partial Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDF__c</fullName>
        <description>PDF attachment</description>
        <formula>IF( ISPICKVAL( Document_Type__c , &apos;FV&apos;), HYPERLINK(&apos;https://emea.salesforce.com/apex/viewBillingDocument?id=&apos; + Name, &apos;PDF&apos; , &apos;_blank&apos;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PDF attachment</inlineHelpText>
        <label>PDF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Amount_Formatted__c</fullName>
        <formula>IF( ISBLANK( Paid__c ) , &apos;&apos;, 
IF( OR(CONTAINS(TEXT(Paid__c ), &apos;.&apos;), CONTAINS(TEXT(Paid__c ), &apos;,&apos;)) , SUBSTITUTE(TEXT(Paid__c ) , &apos; &apos;, &apos;&apos;), SUBSTITUTE(TEXT(Paid__c ) , &apos; &apos;, &apos;&apos;) + &apos;.00&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Document__c</fullName>
        <label>Parent Document</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Billing Documents</relationshipLabel>
        <relationshipName>Billing_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Billing Document</label>
    <nameField>
        <label>Document ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>